--- a/app-detector/templates/upload.html
+++ b/app-detector/templates/upload.html
@@ -69,7 +69,7 @@ main {
     
 <div style="margin-bottom:40px"></div>    
 
-<h1 style="font-weight:bold; font-size:36px">Detect Features In Your Photo</h1>
+<h1 style="font-weight:bold; font-size:36px">Detect Objects In Your Photo</h1>
 <div style="margin-bottom:30px"></div>    
     
 <span style="font-size:20px;">Upload a photo (gif, png, jpg, jpeg):</span>
